# ioTech

./: .env.example  .gitignore  README.md  agent.md  nixpacks.toml  package-lock.json  package.json  railway.json
.agent/: context.md  dashboard-phase-6-archive.md
.atl/: skill-registry.md
.engram/: config.json
.github/workflows/: deploy.yml
ai-context/: README.md
ai-context/esp32/: gpio-safety.md  iotech-firmware-standard.md  models.md
ai-context/prompts/: firmware-generator-rules.md
backend/: .eslintrc.js  Dockerfile  exploration.md  jest.config.js  knexfile.js  package-lock.json  package.json
backend/src/: app.js  index.js
backend/src/__tests__/: admin.integration.test.js  auth.integration.test.js  auth.rateLimit.integration.test.js  dashboards.integration.test.js  datastreams-device-templates.integration.test.js  firmware-ota.integration.test.js  (+9 more)
backend/tests/: mock-device-client.js
docs/: DEVELOPMENT.md  INSTALLER_ONBOARDING.md  vps-migration-plan.md
docs/sdd/: installer-flow-proposal.md  installer-flow-verify-report.md
firmware/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.esp32dev
firmware/certs/: isrg_root_x1.pem
firmware/components/captive_portal/: CMakeLists.txt  captive_portal.c
firmware/components/captive_portal/include/: captive_portal.h
firmware/components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c
firmware/components/mqtt_manager/include/: mqtt_manager.h
firmware/components/ota_manager/: CMakeLists.txt  ota_manager.c
firmware/components/ota_manager/include/: ota_manager.h
firmware/components/state_machine/: CMakeLists.txt  state_machine.c
firmware/components/state_machine/include/: state_machine.h
firmware/include/: iotech.hpp
firmware/src/: CMakeLists.txt  main.c  user_app.cpp
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
openspec/: config.yaml
scripts/: flash-device.sh
(+479 files in other folders)
